Added Apollo functions to query github | Added github auth service | Retrieving of issues functional

--- a/src/components/App/Apollo/package.json
+++ b/src/components/App/Apollo/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Header",
+  "name": "Apollo",
   "version": "0.0.0",
   "private": true,
-  "main": "./Header.js"
+  "main": "./Apollo.js"
 }
