--- a/package.json
+++ b/package.json
@@ -14,5 +14,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "apollo-test-utils": "^0.3.2",
+    "enzyme": "^2.9.1",
+    "graphql-tools": "^1.1.0",
+    "react-test-renderer": "^15.6.1"
   }
 }
